* Added a little design flare to alert component, to look less Bootstrap-ish.
* Added "tb_square_medium" crop size, 500x500.
* Added filter for custom logo image in sticky menu, [See Tutorial](http://dev.themeblvd.com/tutorial/adding-a-custom-logo-to-the-sticky-menu/).
* Added user website URL display for bbPress user profiles.
* Added custom height option for page banners.
* Expanded widget area assignments, requires 1.2.4 update to [Theme Blvd Widget Areas plugin](https://wordpress.org/plugins/theme-blvd-widget-areas/).
* Expanded "background" option type image sizing options.
* Darkened body text in WordPress page editor.
* CSS tweaks to buttons.
* Improved appearance of text logo option with "Entrepeneur" theme base.
* Improvements to styling of default widgets with lists.
* Mobile navigation toggle now displays at tablet viewport and in right of header, across all theme bases.
* Main menu font size made smaller for tablets and sticky menu to fit more buttons.
* Updated to FontAwesome 4.3.
* Minor styling improvements for bbPress.
* Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
* Fixed: Post Showcase (no masonry) not displaying right with excerpts.
* Fixed: Breadcrumbs, when bbPress is installed, was taking over breadcrumbs all over the website.
* Fixed: Added missing breadcrumbs for bbPress user profiles.
* Fixed: bbPress tag_list PHP error at the top of topics when "Lead Topic" option is disabled. 
* Fixed: Custom padding not applying to "popout" elements in Builder.
* Fixed: Widgets set as "panel" from theme options not displaying right with no widget title.
* Fixed: Issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
* Fixed: Blog display option not displaying "full content" when selected, instead of excerpts.